[gd_scene load_steps=3 format=2]

[ext_resource path="res://objects/ProgrammableBehaviour.gd" type="Script" id=1]
[ext_resource path="res://objects/CodeInterpreter.gd" type="Script" id=2]

[node name="ProgrammableBehaviour" type="Node"]
script = ExtResource( 1 )

[node name="LockTimer" type="Timer" parent="."]
one_shot = true

[node name="CodeInterpreter" type="Node" parent="."]
script = ExtResource( 2 )

[node name="ExecuteTimer" type="Timer" parent="."]
[connection signal="timeout" from="LockTimer" to="." method="_on_LockTimer_timeout"]
